--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,17 +17,16 @@
         }
     </style>
 </head>
-
 <body>
     <h1>Minecraft /give Visualizer</h1>
     <div>
         <label for="texturePack">Upload Texture Pack (ZIP):</label>
         <input type="file" id="texturePack" accept=".zip">
     </div>
-    <a href="pack.zip" download> Download Vannila Texture Pack</a>
+    <a href="pack.zip" download> Download Vanilla Texture Pack</a>
     <div>
         <label for="giveCommand">Enter /give Command:</label>
-        <input type="text" id="giveCommand" placeholder="/give @p diamond_sword 1 {\" ench\":\"real\"} 1">
+        <input type="text" id="giveCommand" placeholder="/give @p diamond_sword {\"ench\":\"real\"} 1">
     </div>
     <button id="parseButton">Parse Command</button>
     <div id="output">
@@ -36,9 +34,8 @@
         <p><strong>Player:</strong> <span id="player"></span></p>
         <p><strong>Item:</strong> <span id="item"></span></p>
         <p><strong>Amount:</strong> <span id="amount"></span></p>
-        <p><strong>Data:</strong>
+        <p><strong>Data:</strong></p>
         <pre id="data"></pre>
-        </p>
         <div id="itemImage"></div>
 
         <!-- Scale Slider -->
@@ -52,6 +49,7 @@
     <script>
         const textureImages = {}; // Store loaded texture images
         const svgImages = {}; // Store loaded SVG images
+        const gifImages = {}; // Store loaded GIF images
         let texturePackLoaded = false; // Track whether the texture pack has been processed
 
         document.getElementById('texturePack').addEventListener('change', (event) => {
@@ -61,20 +59,7 @@
                 reader.onload = function (e) {
                     const zip = new JSZip();
                     zip.loadAsync(e.target.result).then((zipContent) => {
-                        // Find all image files in the texture pack ZIP
-                        zipContent.folder("assets/minecraft/textures/item").forEach((relativePath, file) => {
-                            if (file.name.endsWith('.png')) {
-                                file.async("blob").then((blob) => {
-                                    const url = URL.createObjectURL(blob);
-                                    textureImages[file.name.replace("assets/minecraft/textures/item/", "")] = url;
-                                    // Convert PNG to SVG if possible (for this example, we assume SVGs exist)
-                                    const svgFilePath = file.name.replace(".png", ".svg");
-                                    svgImages[file.name.replace("assets/minecraft/textures/item/", "")] = svgFilePath;
-                                });
-                            }
-                        });
-                        texturePackLoaded = true; // Mark texture pack as loaded
-                        alert("Texture pack loaded successfully!");
+                        processZipContents(zipContent);
                     });
                 };
                 reader.readAsArrayBuffer(file);
@@ -87,26 +72,35 @@
                         reader.onload = function (e) {
                             const zip = new JSZip();
                             zip.loadAsync(e.target.result).then((zipContent) => {
-                                // Find all image files in the texture pack ZIP
-                                zipContent.folder("assets/minecraft/textures/item").forEach((relativePath, file) => {
-                                    if (file.name.endsWith('.png')) {
-                                        file.async("blob").then((blob) => {
-                                            const url = URL.createObjectURL(blob);
-                                            textureImages[file.name.replace("assets/minecraft/textures/item/", "")] = url;
-                                            // Convert PNG to SVG if possible (for this example, we assume SVGs exist)
-                                            const svgFilePath = file.name.replace(".png", ".svg");
-                                            svgImages[file.name.replace("assets/minecraft/textures/item/", "")] = svgFilePath;
-                                        });
-                                    }
-                                });
-                                texturePackLoaded = true; // Mark texture pack as loaded
-                                alert("Default texture pack loaded!");
+                                processZipContents(zipContent);
                             });
                         };
                         reader.readAsArrayBuffer(blob);
                     });
             }
         });
+
+        function processZipContents(zipContent) {
+            // Find all image files in the texture pack ZIP
+            zipContent.folder("assets/minecraft/textures/item").forEach((relativePath, file) => {
+                if (file.name.endsWith('.png') || file.name.endsWith('.gif')) {
+                    file.async("blob").then((blob) => {
+                        const url = URL.createObjectURL(blob);
+                        const fileName = file.name.replace("assets/minecraft/textures/item/", "");
+                        if (file.name.endsWith('.gif')) {
+                            gifImages[fileName] = url;
+                        } else {
+                            textureImages[fileName] = url;
+                            // Convert PNG to SVG if possible (for this example, we assume SVGs exist)
+                            const svgFilePath = fileName.replace(".png", ".svg");
+                            svgImages[fileName] = svgFilePath;
+                        }
+                    });
+                }
+            });
+            texturePackLoaded = true; // Mark texture pack as loaded
+            alert("Texture pack loaded successfully!");
+        }
 
         document.getElementById('parseButton').addEventListener('click', () => {
             if (!texturePackLoaded) {
@@ -130,15 +124,15 @@
         });
 
         function parseCommand() {
-            const command = document.getElementById('giveCommand').value;
-            const regex = /\/give\s+(\S+)\s+(\S+)\s*(\d*)\s*(\{.*\})?/;
+            const command = document.getElementById('giveCommand').value.replace(/minecraft:/gi, '');
+            const regex = /\/give\s+(\S+)\s+(\S+)\s*(\{.*\})?\s*(\d*)/;
             const match = command.match(regex);
 
             if (match) {
                 const player = match[1];
                 const item = match[2];
-                const amount = match[3] || 1;
-                const data = match[4] ? JSON.parse(match[4]) : {};
+                const data = match[3] ? JSON.parse(match[3]) : {};
+                const amount = match[4] || 1;
 
                 document.getElementById('player').textContent = player;
                 document.getElementById('item').textContent = item;
@@ -156,10 +150,9 @@
             itemImage.innerHTML = ''; // Clear previous image
 
             const imageElement = document.createElement('img');
-            let itemImagePath = svgImages[`${item}.svg`] || textureImages[`${item}.png`]; // Check if SVG is available, fall back to PNG
+            let itemImagePath = svgImages[`${item}.svg`] || textureImages[`${item}.png`] || gifImages[`${item}.gif`]; // Check if SVG, PNG, or GIF is available
 
             if (itemImagePath) {
-                // Check if the file is an SVG or PNG
                 if (itemImagePath.endsWith('.svg')) {
                     // If SVG, use inline SVG by fetching it
                     fetch(itemImagePath)
@@ -171,11 +164,15 @@
                             setupScaleSlider(); // Show the slider once the image is processed
                         });
                 } else {
-                    // If PNG, display as an image
+                    // If PNG or GIF, display as an image
                     imageElement.src = itemImagePath;
                     imageElement.alt = item;
                     itemImage.appendChild(imageElement);
                     setupScaleSlider(); // Show the slider once the image is processed
+
+                    if (itemImagePath.endsWith('.gif')) {
+                        alert('Animated item detected!');
+                    }
                 }
             } else {
                 imageElement.src = "default_item_image.png"; // Fallback image
@@ -204,5 +201,4 @@
         }
     </script>
 </body>
-
 </html>
